@@ -46,6 +46,8 @@ machines at the same time.
 This shouldn't be too hard, since (1) gtt already uses xml, can be shipped 
 over the net (2) gtt already has an html viewer.
 
+Maybe we should use XML-RPC for this ??
+
 
 Bugs -- High Priority
 ---------------------
@@ -87,9 +89,6 @@ build fancier reports/journals, including
 the log file should be gziped on write.
 
 should use local currencies in invoice reports
-
-need to add task states 'already been invoiced' and 'paid', 
-these states needed for auto-invoice generation ...
 
 corba/bonobo stuff
 ------------------
