@@ -11,7 +11,7 @@ This is the verbose journal, showing all data:
 (handy for debugging and what not).
 <br><br>
 
-<?scm (gtt-show-table '($memo $billable $billrate $task_time $value $bill_value 
+<?scm (gtt-show-table '($memo $billstatus $billable $billrate $task_time $value $bill_value 
 $start_datime $stop_datime $elapsed $fuzz))  ?>
 
 <!--
