@@ -15,6 +15,9 @@ Sun Sep 23 15:17:30 CDT 2001  Linas Vepstas <linas@linas.org>
 	* ctree.c, menus.c: add support for showing & editing 
 	  the task memo from the main window
 
+	* proj.[ch], xml-read.c, xml-write.c, ghtml.c: : add 
+          billing status field
+
 Wed Sep 19 10:17:58 CDT 2001  Linas Vepstas <linas@linas.org>
 
 	* xml-read.c: changes to minimize likelyhood of loss
